--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,34 +3,41 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
 header {
   width: 100%;
   height: 3.5rem;
   padding: 0 1.5rem;
   background-color: #ebd34e;
 }
+
 main {
   padding: 1.5rem;
 }
+
 nav {
   height: 100%;
   display: flex;
   align-items: center;
 }
+
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
 }
+
 li {
   margin: 0 1rem;
   padding: 0;
 }
+
 a {
   text-decoration: none;
   color: black;
 }
+
 a:hover,
 a:active,
 a.active {
@@ -39,4 +46,8 @@ a.active {
 
 .active {
   font-weight: bold;
+}
+
+img {
+  max-width: 100px;
 }
