--- a/views/admin/distros.ejs
+++ b/views/admin/distros.ejs
@@ -26,8 +26,9 @@
                <p class="distro-status">Status: <%= distro.isActive %></p>
             </div>
             <div class="card-actions">
-               <a href="/admin/edit-distro" class="btn">Edit</a>
+               <a href="/admin/edit-distro/<%= distro.id%>?edit=true" class="btn">Edit</a>
                <form action="/admin/delete-distro" method="POST">
+                  <input type="hidden" value="<%= distro.id%>" name="distroId">
                   <button class="btn" type="submit">Delete</button>
                </form>
             </div>
