--- a/views/distros/hopping.ejs
+++ b/views/distros/hopping.ejs
@@ -1,6 +1,25 @@
 <%- include('../includes/head.ejs') %>
 </head>
+
 <body>
    <%- include('../includes/nav.ejs') %>
 
-<%- include('../includes/end.ejs') %>
+   <main>
+      <% if (distros.length > 0) { %>
+      <ul>
+         <% distros.forEach(p => { %>
+         <li>
+            <p><%= p.distroData.name %></p>
+            <form action="/hopping-delete-item" method="POST">
+               <input type="hidden" value="<%= p.distroData.id %>" name="distroId">
+               <button class="btn" type="submit">Delete</button>
+            </form>
+         </li>
+         <% }) %>
+      </ul>
+      <% } else { %>
+      <h1>No distros in Hopping list</h1>
+      <% } %>
+   </main>
+
+   <%- include('../includes/end.ejs') %>
