--- a/views/distros/index.ejs
+++ b/views/distros/index.ejs
@@ -26,7 +26,7 @@
                <p class="distro-status">Status: <%= distro.isActive %></p>
             </div>
             <div class="card-actions">
-               <button class="btn">Add</button>
+               <%- include('../includes/add-to-hopping.ejs', {distro: distro}) %>
             </div>
          </article>
          <% } %>
