--- a/views/distros/distro-list.ejs
+++ b/views/distros/distro-list.ejs
@@ -26,7 +26,7 @@
                <p class="distro-status">Status: <%= distro.isActive %></p>
             </div>
             <div class="card-actions">
-               <a href="/distros/<%= distro.id %>" class="btn">Details</a>
+               <a href="/distros/<%= distro._id %>" class="btn">Details</a>
                <%- include('../includes/add-to-hopping.ejs', {distro: distro}) %>
 
             </div>
