--- a/views/includes/add-to-hopping.ejs
+++ b/views/includes/add-to-hopping.ejs
@@ -1,4 +1,4 @@
 <form action="/hopping" method="POST">
    <button class="btn" type="submit">Hopping</button>
-   <input type="hidden" name="distroId" value="<%= distro.id %>">
+   <input type="hidden" name="distroId" value="<%= distro._id %>">
 </form>
