--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -8,11 +8,16 @@
          <li>
             <a href="/hopping" class="<%= path === '/hopping' ? 'active' : '' %>">Hopping</a>
          </li>
-         <li>
+         <!--  <li>
             <a href="/admin/add-distro" class="<%= path === '/admin/add-distro' ? 'active' : '' %>">Add distro</a>
          </li>
          <li>
             <a href="/admin/distros" class="<%= path === '/admin/distros' ? 'active' : '' %>">Admin Distros</a>
+         </li> -->
+      </ul>
+      <ul>
+         <li>
+            <a href="/login">Login</a>
          </li>
       </ul>
    </nav>
