--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -9,20 +9,13 @@
       <% if (errorMessage) { %>
       <div class="px-5 p-2 bg-red-700 text-r font-body"><%= errorMessage %></div>
       <% } %>
-      <form action="/login" method="POST">
+      <form action="/reset" method="POST">
          <div class="form-control">
             <label for="email">Email</label>
             <input type="email" name="email" id="email">
          </div>
-         <div class="form-control">
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password">
-         </div>
          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-         <button type="submit">Login</button>
+         <button type="submit">Reset Password</button>
       </form>
-      <div class=" text-center">
-         <a href="/reset">Reset Password</a>
-      </div>
    </main>
    <%- include('../includes/end.ejs') %>
