--- a/public/css/input.css
+++ b/public/css/input.css
@@ -1,3 +1,49 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.hamburger {
+   position: relative;
+   width: 24px;
+   height: 24px;
+   transition: all 250ms;
+   cursor: pointer;
+}
+
+.hamburger-top,
+.hamburger-middle,
+.hamburger-bottom {
+   background-color: #171717;
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 24px;
+   height: 2px;
+   transform: 0;
+   transition: all 500ms;
+}
+
+.hamburger-middle {
+   transform: translateY(7px);
+}
+
+.hamburger-bottom {
+   transform: translateY(14px);
+}
+
+.open {
+   transform: rotate(90deg);
+   transform: translateY(0px);
+}
+
+.open .hamburger-top {
+   transform: rotate(45deg) translateY(6px) translate(6px);
+}
+
+.open .hamburger-middle {
+   display: none;
+}
+
+.open .hamburger-bottom {
+   transform: rotate(-45deg) translateY(6px) translate(-6px);
+}
