add some styles

--- a/views/admin/distros.ejs
+++ b/views/admin/distros.ejs
@@ -1,44 +1,43 @@
 <%- include('../includes/head.ejs') %>
-<link rel="stylesheet" href="/css/distros.css">
 </head>
 
-<body>
-   <%- include('../includes/nav.ejs') %>
+<%- include('../includes/body-start.ejs') %>
+<%- include('../includes/nav.ejs') %>
 
-   <main>
-      <% if (distros.length > 0) { %>
-      <h1>Linux Distros</h1>
-      <p>List of linux distros</p>
+<main>
+   <% if (distros.length > 0) { %>
+   <h1>Linux Distros</h1>
+   <p>List of linux distros</p>
 
-      <div class="grid">
-         <% for (let distro of distros) { %>
-         <article class="card-distro-item">
-            <div class="card-header">
-               <h1 class="distro-title"><%= distro.name %></h1>
-            </div>
-            <div class="card-image">
-               <img src="<%= distro.imageUrl %>" alt="">
-            </div>
-            <div class="card-content">
-               <h2 class="distro-based"><%= distro.basedOn %></h2>
-               <h2 class="distro-desktop"><%= distro.desktopEnv %></h2>
-               <p class="distro-description"><%= distro.description %></p>
-               <p class="distro-status">Status: <%= distro.isActive %></p>
-            </div>
-            <div class="card-actions">
-               <a href="/admin/edit-distro/<%= distro._id%>?edit=true" class="btn">Edit</a>
-               <form action="/admin/delete-distro" method="POST">
-                  <input type="hidden" value="<%= distro._id%>" name="distroId">
-                  <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                  <button class="btn" type="submit">Delete</button>
-               </form>
-            </div>
-         </article>
-         <% } %>
-      </div>
-      <% } else { %>
-      <h1>No distros Found</h1>
+   <div class="grid">
+      <% for (let distro of distros) { %>
+      <article class="card-distro-item">
+         <div class="card-header">
+            <h1 class="distro-title"><%= distro.name %></h1>
+         </div>
+         <div class="card-image">
+            <img src="<%= distro.imageUrl %>" alt="">
+         </div>
+         <div class="card-content">
+            <h2 class="distro-based"><%= distro.basedOn %></h2>
+            <h2 class="distro-desktop"><%= distro.desktopEnv %></h2>
+            <p class="distro-description"><%= distro.description %></p>
+            <p class="distro-status">Status: <%= distro.isActive %></p>
+         </div>
+         <div class="card-actions">
+            <a href="/admin/edit-distro/<%= distro._id%>?edit=true" class="btn">Edit</a>
+            <form action="/admin/delete-distro" method="POST">
+               <input type="hidden" value="<%= distro._id%>" name="distroId">
+               <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+               <button class="btn" type="submit">Delete</button>
+            </form>
+         </div>
+      </article>
       <% } %>
-   </main>
+   </div>
+   <% } else { %>
+   <h1>No distros Found</h1>
+   <% } %>
+</main>
 
-   <%- include('../includes/end.ejs') %>
+<%- include('../includes/end.ejs') %>
