--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,28 +1,41 @@
 <%- include('../includes/head.ejs') %>
-<link rel="stylesheet" href="/css/add-distro.css">
 </head>
 
-<body>
-   <%- include('../includes/nav.ejs') %>
+<%- include('../includes/body-start.ejs') %>
+<%- include('../includes/nav.ejs') %>
 
-   <main>
-      <% if (errorMessage) { %>
-      <div class="px-5 p-2 bg-red-700 text-r font-body"><%= errorMessage %></div>
-      <% } %>
+<main class="container mx-auto">
+   <h1 class="mt-16 mb-11 text-2xl text-center">Sign in to Linux Distros!</h1>
+   <div class="bg-gray-50 w-96 mx-auto py-12 px-12 drop-shadow-xl shadow-inner rounded-lg">
       <form action="/login" method="POST">
-         <div class="form-control">
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email">
+         <div class="mb-4">
+            <label class="block mb-1" for="email">Email</label>
+            <input class="block w-full bg-transparent border-b-2 border-gray-300 focus:outline-none" type="email"
+               name="email" id="email">
          </div>
-         <div class="form-control">
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password">
+         <div class="mb-6">
+            <label class="block mb-1" for="password">Password</label>
+            <input class="block w-full bg-transparent border-b-2 border-gray-300 focus:outline-none" type="password"
+               name="password" id="password">
          </div>
          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-         <button type="submit">Login</button>
+         <button type="submit"
+            class="bg-blue-700 text-slate-200 rounded-lg px-4 py-2 mb-7 w-full transition ease-in-out 5 hover:bg-blue-500 duration-300">Login</button>
+
+         <% if (errorMessage) { %>
+
+         <div class=" text-center mb-7">
+            <p class="text-red-600 font-bold"><%= errorMessage %></p>
+            <p>Reset your password <span class="font-bold text-blue-700"><a href="/reset">here</a></span> or try
+               again!</p>
+         </div>
+         <% } %>
       </form>
-      <div class=" text-center">
-         <a href="/reset">Reset Password</a>
-      </div>
-   </main>
-   <%- include('../includes/end.ejs') %>
+      <hr class="border-1 border-gray-300 w-1/3 m-auto mb-7">
+      <p class="text-center">New to Linux Distros? <span class="text-blue-700 hover:text-blue-500 block"><a
+               href="/signup">Create an
+               account.</a></span> </p>
+   </div>
+
+</main>
+<%- include('../includes/end.ejs') %>
