--- a/views/distros/distro-list.ejs
+++ b/views/distros/distro-list.ejs
@@ -1,40 +1,36 @@
 <%- include('../includes/head.ejs') %>
-<link rel="stylesheet" href="/css/distros.css">
 </head>
 
-<body>
-   <%- include('../includes/nav.ejs') %>
+<%- include('../includes/body-start.ejs') %>
+<%- include('../includes/nav.ejs') %>
 
-   <main>
-      <% if (distros.length > 0) { %>
-      <h1>Linux Distros</h1>
-      <p>List of linux distros</p>
+<main class="container mx-auto">
+   <% if (distros.length > 0) { %>
+   <h1 class="mt-16 mb-11 text-2xl">List of linux distros</h1>
 
-      <div class="grid">
-         <% for (let distro of distros) { %>
-         <article class="card-distro-item">
-            <div class="card-header">
-               <h1 class="distro-title"><%= distro.name %></h1>
-            </div>
-            <div class="card-image">
-               <img src="<%= distro.imageUrl %>" alt="">
-            </div>
-            <div class="card-content">
-               <h2 class="distro-based"><%= distro.basedOn %></h2>
-               <h2 class="distro-desktop"><%= distro.desktopEnv %></h2>
-               <p class="distro-description"><%= distro.description %></p>
-               <p class="distro-status">Status: <%= distro.isActive %></p>
-            </div>
-            <div class="card-actions">
-               <a href="/distros/<%= distro._id %>" class="btn">Details</a>
-               <%- include('../includes/add-to-hopping.ejs', {distro: distro}) %>
-            </div>
-         </article>
-         <% } %>
-      </div>
-      <% } else { %>
-      <h1>No distros Found</h1>
+   <div class="grid grid-cols-4 gap-4">
+      <% for (let distro of distros) { %>
+      <article class="bg-gray-50 mx-auto py-12 px-12 drop-shadow-xl shadow-inner rounded-lg">
+         <div class="card-image">
+            <img class="object-scale-down h-24 w-48 " src="<%= distro.imageUrl %>" alt="">
+         </div>
+         <div class="text-left">
+            <h1 class="distro-title">Name: <%= distro.name %></h1>
+            <h2 class="distro-based">Based on: <%= distro.basedOn %></h2>
+            <h2 class="distro-desktop"><%= distro.desktopEnv %></h2>
+            <p class="distro-description"><%= distro.description %></p>
+            <p class="distro-status">Status: <%= distro.isActive %></p>
+         </div>
+         <div class="card-actions">
+            <a href="/distros/<%= distro._id %>" class="btn">Details</a>
+            <%- include('../includes/add-to-hopping.ejs', {distro: distro}) %>
+         </div>
+      </article>
       <% } %>
-   </main>
+   </div>
+   <% } else { %>
+   <h1 class="mt-16 mb-11 text-2xl">No distros Found</h1>
+   <% } %>
+</main>
 
-   <%- include('../includes/end.ejs') %>
+<%- include('../includes/end.ejs') %>
