--- a/public/css/input.css
+++ b/public/css/input.css
@@ -2,6 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+/* body {
+   background-image: url('../images/bg-pattern.svg');
+   background-repeat: no-repeat;
+   background-size: 800px;
+   background-position: 90% -25%;
+}
+
+#cta {
+   background-image: url('../images/bg-simplify-section-desktop.svg');
+   background-repeat: no-repeat;
+}
+
+@media(max-width: 768px) {
+   body {
+      background-position: 50px -50px;
+      background-size: 500px;
+   }
+
+   #cta {
+      background-image: url('../images/bg-simplify-section-mobile.svg');
+   }
+} */
+
 .hamburger {
    position: relative;
    width: 24px;
