--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -1,21 +1,32 @@
 <%- include('../includes/head.ejs') %>
-<link rel="stylesheet" href="/css/add-distro.css">
 </head>
 
-<body>
-   <%- include('../includes/nav.ejs') %>
+<%- include('../includes/body-start.ejs') %>
+<%- include('../includes/nav.ejs') %>
 
-   <main>
-      <% if (errorMessage) { %>
-      <div class="px-5 p-2 bg-red-700 text-r font-body"><%= errorMessage %></div>
-      <% } %>
+<main class="container mx-auto">
+   <h1 class="mt-16 mb-11 text-2xl text-center">Reset your password!</h1>
+   <div class="bg-gray-50 w-96 mx-auto py-12 px-12 drop-shadow-xl shadow-inner rounded-lg">
       <form action="/reset" method="POST">
-         <div class="form-control">
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email">
+         <div class="mb-6">
+            <label class="block mb-1" for="email">Email</label>
+            <input class="block w-full bg-transparent border-b-2 border-gray-300 focus:outline-none" type="email"
+               name="email" id="email">
          </div>
          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-         <button type="submit">Reset Password</button>
+         <button
+            class="bg-blue-700 text-slate-200 rounded-lg px-4 py-2 w-full transition ease-in-out 5 hover:bg-blue-500 duration-300"
+            type="submit">Reset Password</button>
+
+         <% if (errorMessage) { %>
+
+         <div class=" text-center mt-7">
+            <p class="text-red-600 font-bold"><%= errorMessage %></p>
+         </div>
+
+         <% } %>
+
       </form>
-   </main>
-   <%- include('../includes/end.ejs') %>
+   </div>
+</main>
+<%- include('../includes/end.ejs') %>
