--- a/views/distros/404.ejs
+++ b/views/distros/404.ejs
@@ -1,12 +1,12 @@
 <%- include('../includes/head.ejs') %>
 </head>
 
-<body>
-   <%- include('../includes/nav.ejs') %>
+<%- include('../includes/body-start.ejs') %>
+<%- include('../includes/nav.ejs') %>
 
-   <main>
-      <h1>ERROR 404</h1>
-      <p>Page not found</p>
-   </main>
-   
+<main>
+   <h1>ERROR 404</h1>
+   <p>Page not found</p>
+</main>
+
 <%- include('../includes/end.ejs') %>
