--- a/views/distros/index.ejs
+++ b/views/distros/index.ejs
@@ -1,40 +1,214 @@
 <%- include('../includes/head.ejs') %>
-<link rel="stylesheet" href="/css/distros.css">
+
 </head>
 
-<body>
-   <%- include('../includes/nav.ejs') %>
+<%- include('../includes/body-start.ejs') %>
+<%- include('../includes/nav.ejs') %>
 
-   <main>
-      <% if (distros.length > 0) { %>
-      <h1>Linux Distros</h1>
-      <p>List of linux distros</p>
+<!-- <main>
+   <p class="text-teal-500">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis ut ipsum cumque non
+      repellendus, facilis
+      perferendis! Cum temporibus recusandae exercitationem at totam libero ipsum, adipisci, quidem, consequuntur
+      obcaecati similique accusamus!</p>
 
-      <div class="grid">
+   <% if (distros.length > 0) { %>
+   <h1>Linux Distros</h1>
+   <p>List of linux distros</p>
+
+   <div class=" grid>
          <% for (let distro of distros) { %>
-         <article class="card-distro-item">
-            <div class="card-header">
-               <h1 class="distro-title"><%= distro.name %></h1>
+         <article class=" card-distro-item">
+      <div class="card-header">
+         <h1 class="distro-title"><%= distro.name %></h1>
+      </div>
+      <div class="card-image">
+         <img src="<%= distro.imageUrl %>" alt="">
+      </div>
+      <div class="card-content">
+         <h2 class="distro-based"><%= distro.basedOn %></h2>
+         <h2 class="distro-desktop"><%= distro.desktopEnv %></h2>
+         <p class="distro-description"><%= distro.description %></p>
+         <p class="distro-status">Status: <%= distro.isActive %></p>
+      </div>
+      <div class="card-actions">
+         <a href="/distros/<%= distro._id %>" class="btn">Details</a>
+         <%- include('../includes/add-to-hopping.ejs', {distro: distro}) %>
+      </div>
+      </article>
+      <% } %>
+   </div>
+   <% } else { %>
+   <h1>No distros Found</h1>
+   <% } %>
+</main> -->
+
+<section id="hero" class=" md:h-[calc(100vh_-_87px)] md:flex">
+   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"
+      class="-z-10 absolute bottom-0 left-0 hidden md:block">
+      <path fill="#1D4ED8" fill-opacity="1"
+         d="M0,288L48,277.3C96,267,192,245,288,245.3C384,245,480,267,576,261.3C672,256,768,224,864,181.3C960,139,1056,85,1152,80C1248,75,1344,117,1392,138.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+   </svg>
+   <div class="container flex flex-col-reverse items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0 md:flex-row">
+      <!-- Text -->
+      <div class="flex flex-col space-y-12 md:w-2/3 md:mb-32">
+         <h1 class="max-w-md text-4xl font-bold text-center md:text-5xl md:text-left">Lorem ipsum, dolor sit amet
+            consectetur adipisicing.</h1>
+         <p class="max-w-sm text-center md:text-left">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio, dicta?
+         </p>
+         <div class="flex justify-center md:justify-start">
+            <a href="/distros"
+               class="p-2 px-6 bg-blue-700 text-slate-200 rounded-full baseline hover:bg-blue-600 ease-in-out duration-300">Distros</a>
+         </div>
+      </div>
+      <!-- Image -->
+      <div class=" md:w-1/3">
+         <img src="/images/undraw-intro.svg" class="md:mb-32" alt="">
+      </div>
+   </div>
+</section>
+
+<section id="why">
+   <div class="container flex flex-col px-4 mx-auto mt-32 space-y-12 md:space-y-0 md:flex-row">
+      <!-- Why -->
+      <div class="flex flex-col space-y-12 md:w-1/2">
+         <h1 class="max-w-md text-4xl font-bold text-center md:text-left">Why should i use Linux?
+         </h1>
+         <p class="max-w-sm text-center md:text-left">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, eligendi?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, iure.
+         </p>
+      </div>
+      <!-- List -->
+      <div class="flex flex-col space-y-8 md:w-1/2">
+         <!-- List item -->
+         <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+            <!-- Heading -->
+            <div class="rounded-l-full bg-blue-100 md:bg-transparent">
+               <div class="flex items-center space-x-2">
+                  <div class="px-4 py-2 rounded-full md:py-1 bg-blue-700 text-slate-200">
+                     01
+                  </div>
+                  <h3 class="text-base font-bold md:mb-4 md:hidden ">Lorem ipsum dolor sit.</h3>
+               </div>
             </div>
-            <div class="card-image">
-               <img src="<%= distro.imageUrl %>" alt="">
+
+            <div>
+               <h3 class="hidden mb-4 text-lg font-bold md:block">
+                  Lorem ipsum dolor sit.
+               </h3>
+               <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum expedita impedit, ut explicabo
+                  assumenda et.
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad exercitationem laborum aut cupiditate.
+                  Accusantium, sint!
+               </p>
             </div>
-            <div class="card-content">
-               <h2 class="distro-based"><%= distro.basedOn %></h2>
-               <h2 class="distro-desktop"><%= distro.desktopEnv %></h2>
-               <p class="distro-description"><%= distro.description %></p>
-               <p class="distro-status">Status: <%= distro.isActive %></p>
+         </div>
+         <!-- List item -->
+         <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+            <!-- Heading -->
+            <div class="rounded-l-full bg-blue-100 md:bg-transparent">
+               <div class="flex items-center space-x-2">
+                  <div class="px-4 py-2 rounded-full md:py-1 bg-blue-700 text-slate-200">
+                     02
+                  </div>
+                  <h3 class="text-base font-bold md:mb-4 md:hidden ">Lorem ipsum dolor sit.</h3>
+               </div>
             </div>
-            <div class="card-actions">
-               <a href="/distros/<%= distro._id %>" class="btn">Details</a>
-               <%- include('../includes/add-to-hopping.ejs', {distro: distro}) %>
+
+            <div>
+               <h3 class="hidden mb-4 text-lg font-bold md:block">
+                  Lorem ipsum dolor sit.
+               </h3>
+               <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum expedita impedit, ut explicabo
+                  assumenda et.
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad exercitationem laborum aut cupiditate.
+                  Accusantium, sint!
+               </p>
             </div>
-         </article>
+         </div>
+         <!-- List item -->
+         <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+            <!-- Heading -->
+            <div class="rounded-l-full bg-blue-100 md:bg-transparent">
+               <div class="flex items-center space-x-2">
+                  <div class="px-4 py-2 rounded-full md:py-1 bg-blue-700 text-slate-200">
+                     03
+                  </div>
+                  <h3 class="text-base font-bold md:mb-4 md:hidden ">Lorem ipsum dolor sit.</h3>
+               </div>
+            </div>
+
+            <div>
+               <h3 class="hidden mb-4 text-lg font-bold md:block">
+                  Lorem ipsum dolor sit.
+               </h3>
+               <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum expedita impedit, ut explicabo
+                  assumenda et.
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad exercitationem laborum aut cupiditate.
+                  Accusantium, sint!
+               </p>
+            </div>
+         </div>
+      </div>
+   </div>
+</section>
+
+<section id="cards">
+   <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
+      <% if (distros.length > 0) { %>
+      <h2 class="text-4xl font-bold text-center">
+         Last updated entries
+      </h2>
+      <!-- Cards container -->
+      <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+
+         <!-- Card -->
+         <% for (let distro of distros) { %>
+         <div class="flex flex-col items-center p-6 space-y-6 rounded-lg  shadow-sm bg-blue-100 mb-16 md:mb-0 md:w-1/3">
+            <img src="<%= distro.imageUrl %>" class="h-20 -mt-14" alt="">
+            <h5 class="text-lg font-bold"><%= distro.name %></h5>
+            <p><%= distro.description %>
+            </p>
+         </div>
          <% } %>
+
+      </div>
+      <div class="mb-16 md:my-16">
+         <a href="/distros"
+            class="p-2 px-6 bg-blue-700 text-slate-200 rounded-full baseline hover:bg-blue-600 ease-in-out duration-300">Show
+            more</a>
       </div>
       <% } else { %>
-      <h1>No distros Found</h1>
-      <% } %>
-   </main>
+      <h2 class="text-4xl font-bold text-center mb-16 md:my-16">
+         No distros found
+      </h2>
 
-   <%- include('../includes/end.ejs') %>
+      <% } %>
+   </div>
+</section>
+
+<section id="cta" class="bg-blue-700">
+   <div
+      class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:py-12 md:flex-row md:space-y-0">
+      <!-- Heading -->
+      <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">
+         Create an account and fill your <span class="italic">Hopping List</span>
+      </h2>
+      <!-- Button -->
+      <a href="/signup"
+         class="p-2 px-6 bg-blue-100 text-blue-700 rounded-full shadow-2xl baseline hover:bg-blue-200 ease-in-out duration-300">Singup</a>
+   </div>
+</section>
+
+<footer>
+   <div class="px-6 py-10 mx-auto space-y-8 text-center bg-neutral-900 md:space-y-0">
+      <p class="text-white text-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, aperiam.</p>
+   </div>
+</footer>
+
+<%- include('../includes/end.ejs') %>
