--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -10,18 +10,21 @@
       <form action="/signup" method="POST">
          <div class="mb-4">
             <label class="block mb-1" for="email">E-Mail</label>
-            <input class="block w-full bg-transparent border-b-2 border-gray-300 focus:outline-none" type="email"
-               name="email" id="email">
+            <input
+               class=" block w-full bg-transparent border-b-2 border-gray-300 focus:outline-none <%= validationErrors.find(e => e.param === 'email') ? 'border-red-700' : '' %>"
+               type="email" name="email" id="email" value="<%= oldInput.email %>">
          </div>
          <div class="mb-4">
             <label class="block mb-1" for="password">Password</label>
-            <input class="block w-full bg-transparent border-b-2 border-gray-300 focus:outline-none" type="password"
-               name="password" id="password">
+            <input
+               class="block w-full bg-transparent border-b-2 border-gray-300 focus:outline-none <%= validationErrors.find(e => e.param === 'password') ? 'border-red-700' : '' %>"
+               type="password" name="password" id="password" value="<%= oldInput.password %>">
          </div>
          <div class="mb-6">
             <label class="block mb-1" for="confirmPassword">Confirm Password</label>
-            <input class="block w-full bg-transparent border-b-2 border-gray-300 focus:outline-none" type="password"
-               name="confirmPassword" id="confirmPassword">
+            <input
+               class="block w-full bg-transparent border-b-2 border-gray-300 focus:outline-none <%= validationErrors.find(e => e.param === 'confirmPassword') ? 'border-red-700' : '' %>"
+               type="password" name="confirmPassword" id="confirmPassword" value="<%= oldInput.confirmPassword %>">
          </div>
          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
          <button
